--- a/src/app/pages/listing.page.html
+++ b/src/app/pages/listing.page.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="listing != null">
 	<div *ngFor="let pokemon of listing.results">
-		<h1>{{ pokemon.name }}</h1>
+		<img [src]="getImage(pokemon)" [alt]="pokemon.name"/>
+		<h1>{{ pokemon.name | titlecase }}</h1>
 	</div>
 </ng-container>
